# backend/docs/swagger.json
@@ -60,8 +60,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "ReportName",
-                        "name": "report_name",
+                        "description": "DocumentName",
+                        "name": "document_name",
                         "in": "formData"
                     },
                     {
